--- a/ui/index.html
+++ b/ui/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AI-Assisted Incident & Problem Management</title>
-  <link rel="stylesheet" href="styles.css?v=3.0.0">
+  <title>Incident & Problem Management</title>
+  <link rel="stylesheet" href="styles.css?v=4.0.0">
 </head>
 <body>
 
 <div class="board">
 
   <!-- D0 -->
-  <div class="column">
+  <div class="column column-normal">
     <div class="column-header">Incident Overview & Evidence</div>
     <div class="column-content">
       <div class="card">
@@ -29,25 +29,22 @@
   </div>
 
   <!-- D1–D2 -->
-  <div class="column">
+  <div class="column column-normal">
     <div class="column-header">Problem Initiation</div>
     <div class="column-content">
-      <div class="card">
-        <label>Problem Description</label>
-        <textarea></textarea>
-      </div>
+      <div class="card"><label>Problem Description</label><textarea></textarea></div>
       <div class="card two-col">
         <div><label>Country</label><input></div>
         <div><label>Site / Location</label><input></div>
       </div>
-      <div class="card"><label>Department</label><input></div>
+      <div class="card"><label>Department / Area</label><input></div>
       <div class="card"><label>People / Teams</label><textarea></textarea></div>
     </div>
-    <div class="column-description">Define the problem and context.</div>
+    <div class="column-description">Define context and scope.</div>
   </div>
 
   <!-- D3 -->
-  <div class="column">
+  <div class="column column-normal">
     <div class="column-header">Problem Definition</div>
     <div class="column-content">
       <div class="card"><label>What happened?</label><textarea></textarea></div>
@@ -61,8 +58,8 @@
     <div class="column-description">Shared factual understanding.</div>
   </div>
 
-  <!-- D4 -->
-  <div class="column">
+  <!-- D4 IMMEDIATE ACTIONS (DOUBLE WIDTH) -->
+  <div class="column column-wide">
     <div class="column-header">Immediate Actions</div>
     <div class="column-content">
       <div class="card">
@@ -76,6 +73,14 @@
             </tr>
           </thead>
           <tbody>
+            <!-- 10 rows -->
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
             <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
             <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
             <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
@@ -83,46 +88,26 @@
         </table>
       </div>
     </div>
-    <div class="column-description">Limit impact immediately.</div>
+    <div class="column-description">Short-term containment actions.</div>
   </div>
 
-  <!-- D5 -->
-  <div class="column">
+  <!-- D5 CAUSE ANALYSIS (60% WIDTH) -->
+  <div class="column column-cause">
     <div class="column-header">Cause Analysis</div>
-    <div class="column-content">
-      <div class="card">
-        <h4>Assignment Follow-Up</h4>
-        <table class="wide-table">
-          <thead>
-            <tr>
-              <th class="col-action">Assignment</th>
-              <th class="col-owner">Responsible</th>
-              <th class="col-date">Due</th>
-              <th class="col-date">Actual</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
-            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="column-content grid-d5">
 
-      <div class="card">
-        <h4>5 WHYs – Analysis A</h4>
-        <input><input><input><input><input>
-      </div>
+      <div class="card"><h4>Fishbone Analysis</h4><textarea class="large-box"></textarea></div>
+      <div class="card"><h4>Assignment Tasks for Investigation</h4><textarea class="large-box"></textarea></div>
+      <div class="card"><h4>5 WHYs – Analysis A</h4><input><input><input><input><input></div>
+      <div class="card"><h4>5 WHYs – Analysis B</h4><input><input><input><input><input></div>
+      <div class="card"><h4>Factor / Tree Analysis</h4><textarea class="large-box"></textarea></div>
 
-      <div class="card">
-        <h4>5 WHYs – Analysis B</h4>
-        <input><input><input><input><input>
-      </div>
     </div>
-    <div class="column-description">Identify root causes.</div>
+    <div class="column-description">Identify, validate, and structure root causes.</div>
   </div>
 
-  <!-- D6 -->
-  <div class="column">
+  <!-- D6 PERMANENT ACTIONS -->
+  <div class="column column-wide">
     <div class="column-header">Permanent Actions</div>
     <div class="column-content">
       <div class="card">
@@ -136,17 +121,26 @@
             </tr>
           </thead>
           <tbody>
+            <!-- 10 rows -->
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
             <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
             <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
           </tbody>
         </table>
       </div>
     </div>
-    <div class="column-description">Prevent recurrence.</div>
+    <div class="column-description">Long-term prevention actions.</div>
   </div>
 
   <!-- D7–D8 -->
-  <div class="column">
+  <div class="column column-normal">
     <div class="column-header">Prevention & Closure</div>
     <div class="column-content">
       <div class="card">
@@ -156,11 +150,11 @@
         <label>Closure Date</label><input type="date">
       </div>
     </div>
-    <div class="column-description">Formal closure.</div>
+    <div class="column-description">Standardisation and closure.</div>
   </div>
 
   <!-- AI -->
-  <div class="column ai-column">
+  <div class="column column-normal ai-column">
     <div class="column-header">AI Analysis</div>
     <div class="column-content">
       <div class="card"><button>Run AI Analysis</button></div>
