--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Incident & Problem Management</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -9,168 +9,251 @@
 
 <div class="board">
 
-  <!-- INCIDENT OVERVIEW -->
-  <div class="column column-normal">
-    <div class="column-header">Incident Overview & Evidence</div>
+  <!-- D0 INCIDENT OVERVIEW -->
+  <div class="column col-d0">
+    <div class="header">Incident Overview & Evidence</div>
+    <div class="content">
+      <label>Incident / Case ID</label>
+      <input>
 
-    <div class="column-content">
-      <div class="card">
-        <label>Incident / Case ID</label>
-        <input>
+      <label>Status</label>
+      <input value="Open" readonly>
 
-        <label>Status</label>
-        <input value="Open" readonly>
+      <label>Opening Date</label>
+      <input type="date">
 
-        <label>Opening Date</label>
-        <input type="date">
+      <label>Closure Date</label>
+      <input type="date" readonly>
 
-        <label>Closure Date</label>
-        <input type="date" readonly>
-      </div>
+      <button>Upload Evidence</button>
 
-      <div class="card">
-        <button>Upload Evidence</button>
-      </div>
-
-      <div class="card">
-        No evidence uploaded yet.
-      </div>
+      <div class="muted">No evidence uploaded yet.</div>
     </div>
-
-    <div class="column-description">
-      Status updates automatically when any field in the workflow is edited.
-    </div>
+    <div class="footer">Status updates automatically when any D1–D8 field is edited.</div>
   </div>
 
-  <!-- CAUSE ANALYSIS -->
-  <div class="column column-cause">
-    <div class="column-header">Cause Analysis</div>
+  <!-- D1–D2 PROBLEM INITIATION -->
+  <div class="column col-d12">
+    <div class="header">Problem Initiation (D1–D2)</div>
+    <div class="content scroll-y">
+      <label>Problem Description</label>
+      <textarea></textarea>
 
-    <div class="column-content">
-
-      <!-- FISHBONE -->
-      <div class="card fishbone">
-        <h3>Fishbone Analysis</h3>
-
-        <div class="fishbone-grid-3">
-
-          <div class="fishbone-category">
-            <h4>People / Organization</h4>
-            <label><input type="checkbox"> Critical</label>
-            <input placeholder="Factor 1" data-affects-status="true">
-            <input placeholder="Factor 2" data-affects-status="true">
-            <input placeholder="Factor 3" data-affects-status="true">
-            <input placeholder="Factor 4" data-affects-status="true">
-          </div>
-
-          <div class="fishbone-category">
-            <h4>Process / Workflow</h4>
-            <label><input type="checkbox"> Critical</label>
-            <input placeholder="Factor 1" data-affects-status="true">
-            <input placeholder="Factor 2" data-affects-status="true">
-            <input placeholder="Factor 3" data-affects-status="true">
-            <input placeholder="Factor 4" data-affects-status="true">
-          </div>
-
-          <div class="fishbone-category">
-            <h4>Tools / Systems</h4>
-            <label><input type="checkbox"> Critical</label>
-            <input placeholder="Factor 1" data-affects-status="true">
-            <input placeholder="Factor 2" data-affects-status="true">
-            <input placeholder="Factor 3" data-affects-status="true">
-            <input placeholder="Factor 4" data-affects-status="true">
-          </div>
-
-          <div class="fishbone-category">
-            <h4>Environment / Context</h4>
-            <label><input type="checkbox"> Critical</label>
-            <input placeholder="Factor 1" data-affects-status="true">
-            <input placeholder="Factor 2" data-affects-status="true">
-            <input placeholder="Factor 3" data-affects-status="true">
-            <input placeholder="Factor 4" data-affects-status="true">
-          </div>
-
-          <div class="fishbone-category">
-            <h4>Policy / Management</h4>
-            <label><input type="checkbox"> Critical</label>
-            <input placeholder="Factor 1" data-affects-status="true">
-            <input placeholder="Factor 2" data-affects-status="true">
-            <input placeholder="Factor 3" data-affects-status="true">
-            <input placeholder="Factor 4" data-affects-status="true">
-          </div>
-
-        </div>
-      </div>
-
-      <!-- 5 WHYS -->
       <div class="two-col">
-        <div class="card">
+        <div>
+          <label>Country</label>
+          <input>
+        </div>
+        <div>
+          <label>Site / Location</label>
+          <input>
+        </div>
+      </div>
+
+      <label>Department / Area</label>
+      <input>
+
+      <label>Involved People / Teams</label>
+      <textarea></textarea>
+    </div>
+    <div class="footer">Define scope and context.</div>
+  </div>
+
+  <!-- D3 PROBLEM DEFINITION -->
+  <div class="column col-d3">
+    <div class="header">Problem Definition (D3)</div>
+    <div class="content scroll-y">
+      <label>What happened?</label>
+      <textarea></textarea>
+
+      <label>Why is this a problem?</label>
+      <textarea></textarea>
+
+      <div class="two-col">
+        <div>
+          <label>When?</label>
+          <input>
+        </div>
+        <div>
+          <label>Where?</label>
+          <input>
+        </div>
+      </div>
+
+      <div class="two-col">
+        <div>
+          <label>Who?</label>
+          <input>
+        </div>
+        <div>
+          <label>How identified?</label>
+          <input>
+        </div>
+      </div>
+
+      <label>Impact (how many / how much)</label>
+      <input>
+    </div>
+    <div class="footer">Shared factual understanding.</div>
+  </div>
+
+  <!-- D4 IMMEDIATE ACTIONS -->
+  <div class="column col-d4 wide">
+    <div class="header">Immediate Actions (D4)</div>
+    <div class="content scroll-y">
+      <table>
+        <thead>
+          <tr>
+            <th class="w-action">Action</th>
+            <th class="w-owner">Responsible</th>
+            <th class="w-date">Due</th>
+            <th class="w-date">Actual</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- 10 rows -->
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="footer">Contain and protect stakeholders.</div>
+  </div>
+
+  <!-- D5 CAUSE ANALYSIS -->
+  <div class="column col-d5 huge">
+    <div class="header">Cause Analysis (D5)</div>
+    <div class="content scroll-y">
+
+      <h3>Fishbone Analysis</h3>
+      <div class="fishbone">
+        <!-- 6 categories -->
+        <div class="fish">People / Organization <input type="checkbox"> Critical
+          <input><input><input><input>
+        </div>
+        <div class="fish">Process / Workflow <input type="checkbox"> Critical
+          <input><input><input><input>
+        </div>
+        <div class="fish">Tools / Systems <input type="checkbox"> Critical
+          <input><input><input><input>
+        </div>
+        <div class="fish">Environment / Context <input type="checkbox"> Critical
+          <input><input><input><input>
+        </div>
+        <div class="fish">Policy / Management <input type="checkbox"> Critical
+          <input><input><input><input>
+        </div>
+        <div class="fish">Mother Nature / Place <input type="checkbox"> Critical
+          <input><input><input><input>
+        </div>
+      </div>
+
+      <div class="two-col">
+        <div>
           <h3>5 WHYs – Analysis A</h3>
-          <input placeholder="Why 1" data-affects-status="true">
-          <input placeholder="Why 2" data-affects-status="true">
-          <input placeholder="Why 3" data-affects-status="true">
-          <input placeholder="Why 4" data-affects-status="true">
-          <input placeholder="Why 5" data-affects-status="true">
+          <input><input><input><input><input>
         </div>
-
-        <div class="card">
+        <div>
           <h3>5 WHYs – Analysis B</h3>
-          <input placeholder="Why 1" data-affects-status="true">
-          <input placeholder="Why 2" data-affects-status="true">
-          <input placeholder="Why 3" data-affects-status="true">
-          <input placeholder="Why 4" data-affects-status="true">
-          <input placeholder="Why 5" data-affects-status="true">
+          <input><input><input><input><input>
         </div>
       </div>
 
-      <!-- ASSIGNMENT TASKS -->
-      <div class="card">
-        <h3>Assignment Tasks for Investigation</h3>
-        <table class="fixed-table">
-          <thead>
-            <tr>
-              <th class="w-action">Task</th>
-              <th class="w-owner">Responsible</th>
-              <th class="w-date">Due</th>
-              <th class="w-date">Actual</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
-            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
-            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
-            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
-            <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
-          </tbody>
-        </table>
-      </div>
+      <h3>Assignment Tasks for Investigation</h3>
+      <table>
+        <thead>
+          <tr>
+            <th class="w-action">Task</th>
+            <th class="w-owner">Responsible</th>
+            <th class="w-date">Due</th>
+            <th class="w-date">Actual</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+        </tbody>
+      </table>
 
-      <!-- FACTOR TREE -->
-      <div class="card">
-        <h3>Factor / Tree Analysis</h3>
-        <table class="fixed-table">
-          <thead>
-            <tr>
-              <th class="w-action">Factor</th>
-              <th class="w-owner">Owner</th>
-              <th class="w-date">Reviewed</th>
-              <th class="w-date">Status</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
-            <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
-            <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
-            <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
-            <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
-          </tbody>
-        </table>
-      </div>
+      <h3>Factor / Tree Analysis</h3>
+      <table>
+        <thead>
+          <tr>
+            <th class="w-action">Factor</th>
+            <th class="w-owner">Owner</th>
+            <th class="w-date">Reviewed</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
+          <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
+          <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
+          <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
+          <tr><td><input></td><td><input></td><td><input></td><td><input></td></tr>
+        </tbody>
+      </table>
 
     </div>
+    <div class="footer">Identify and validate root causes.</div>
+  </div>
 
-    <div class="column-description">
-      Identify, structure and validate root causes.
+  <!-- D6 PERMANENT ACTIONS -->
+  <div class="column col-d6 wide">
+    <div class="header">Permanent Actions (D6)</div>
+    <div class="content scroll-y">
+      <!-- same structure as D4 -->
+      <table>
+        <thead>
+          <tr>
+            <th class="w-action">Action</th>
+            <th class="w-owner">Responsible</th>
+            <th class="w-date">Due</th>
+            <th class="w-date">Actual</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- 10 rows -->
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+          <tr><td><input></td><td><input></td><td><input type="date"></td><td><input type="date"></td></tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="footer">Prevent recurrence.</div>
+  </div>
+
+  <!-- D7–D8 PREVENTION & CLOSURE -->
+  <div class="column col-d78">
+    <div class="header">Prevention & Closure (D7–D8)</div>
+    <div class="content">
+      <label>Procedures updated?</label><input>
+      <label>Training completed?</label><input>
+      <label>Quality approved?</label><input>
+      <label>Closure Date</label><input type="date">
+    </div>
+    <div class="footer">Standardisation and closure.</div>
+  </div>
+
+  <!-- AI -->
+  <div class="column col-ai">
+    <div class="header">AI Analysis</div>
+    <div class="content">
+      <button>Run AI Analysis</button>
+      <div class="muted">Agent status: idle</div>
     </div>
   </div>
 
