style improvements forumn widths

--- a/ui/index.html
+++ b/ui/index.html
@@ -136,22 +136,22 @@
       <h3>Fishbone Analysis</h3>
       <div class="fishbone">
         <!-- 6 categories -->
-        <div class="fish">People / Organization <input type="checkbox"> Critical
+        <div class="fish">People / Organization 
           <input><input><input><input>
         </div>
-        <div class="fish">Process / Workflow <input type="checkbox"> Critical
+        <div class="fish">Process / Workflow 
           <input><input><input><input>
         </div>
-        <div class="fish">Tools / Systems <input type="checkbox"> Critical
+        <div class="fish">Tools / Systems 
           <input><input><input><input>
         </div>
-        <div class="fish">Environment / Context <input type="checkbox"> Critical
+        <div class="fish">Environment / Context 
           <input><input><input><input>
         </div>
-        <div class="fish">Policy / Management <input type="checkbox"> Critical
+        <div class="fish">Policy / Management 
           <input><input><input><input>
         </div>
-        <div class="fish">Mother Nature / Place <input type="checkbox"> Critical
+        <div class="fish">Mother Nature / Place 
           <input><input><input><input>
         </div>
       </div>
